test/spec_vectors/local_get/fail/module_7.wat
(module (func $type-empty-vs-i32 (local i32) (local.get 0)))